fix slider overflow

--- a/css/style.css
+++ b/css/style.css
@@ -625,8 +625,9 @@ template {
 
 .services-container {
   max-width: 310px;
-  overflow: hidden;
   height: 430px;
+  margin: auto;
+  overflow: hidden;
 }
 
 .services-wrapper {
@@ -742,7 +743,7 @@ template {
 }
 
 .services-pagination {
-  top: 415px;
+  bottom: 45px !important;
 }
 
 .swiper-pagination-bullet {
@@ -1775,7 +1776,7 @@ template {
     height: 450px;
   }
   .services-pagination {
-    top: 468px;
+    bottom: 97px !important;
   }
 }
 
