--- a/sass/_media-swiper.sass
+++ b/sass/_media-swiper.sass
@@ -16,7 +16,7 @@
         width: 330px
         height: 450px
     &-pagination
-      top: 468px
+      bottom: 97px !important
 @media (min-width: 1200px)
   .services
     &-container
