--- a/sass/blocks/_services.sass
+++ b/sass/blocks/_services.sass
@@ -33,8 +33,9 @@
       height: 1px
   &-container
     max-width: 310px
-    overflow: hidden
     height: 430px
+    margin: auto
+    overflow: hidden
   &-wrapper
     align-items: center
     padding-left: 10px
@@ -110,7 +111,7 @@
       display: none
       width: 199px
   &-pagination
-    top: 415px
+    bottom: 45px !important
 .swiper
   &-pagination
     &-bullets
